# melvin

./: .travis.yml  README.md  melvin.cabal  report.html
benchmarks/: parser.hs
config/: deploy.rb
config/deploy/: production.rb
src/: Main.hs  Melvin.hs
src/Melvin/: Chatrooms.hs  Client.hs  Damn.hs  Exception.hs  Logger.hs  Options.hs  Prelude.hs  Token.hs  Types.hs
src/Melvin/Client/: Auth.hs  Packet.hs
src/Melvin/Damn/: Actions.hs  HTML.hs  Tablumps.hs
src/Melvin/Internal/: MonadAsync.hs  Orphans.hs
src/Melvin/Prelude/: TH.hs
src/Text/Damn/: Packet.hs
src/Text/Damn/Packet/: Internal.hs  Parser.hs
tests/: StubDamn.hs  io.hs  melvin-test.hs
travis/: cabal-apt-install
