name:                melvin
version:             0.1.0.0
synopsis:            A dAmn <-> IRC server
description:         The project that kevin should have been.
homepage:            https://github.com/joelteon/melvin
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Flag error
  Default: False
  Manual: True

executable melvin
  main-is:            Main.hs
  build-depends:      base >=4.4 && <4.8
                    , async >= 2.0
                    , attoparsec
                    , bytestring
                    , containers
                    , cprng-aes
                    , data-default
                    , deepseq
                    , exceptions
                    , fast-logger
                    , file-location
                    , HTTP
                    , lens >= 3.9
                    , monad-logger
                    , mtl
                    , network
                    , old-locale
                    , options >= 1.0
                    , parsec
                    , text
                    , th-printf >= 0.2
                    , thyme
                    , tls
                    , tls-extra
                    , transformers

  If impl(ghc>=7.7)
    build-depends:    lens >= 3.10

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings, QuasiQuotes
  ghc-options:        -Wall

  If flag(error)
    ghc-options:      -Werror -ddump-splices

library
  exposed-modules:    Melvin.Damn.Tablumps
  other-modules:      Melvin.Exception
  hs-source-dirs:     src
  build-depends:      base
                    , async
                    , attoparsec
                    , bytestring
                    , containers
                    , data-default
                    , deepseq
                    , exceptions
                    , fast-logger
                    , file-location
                    , lens
                    , monad-logger
                    , mtl
                    , text
                    , th-printf
                    , transformers
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings

benchmark parser
  type:               exitcode-stdio-1.0
  main-is:            parser.hs
  ghc-options:        -Wall -O2
  hs-source-dirs:     benchmarks
  build-depends:      base, criterion, melvin, text
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
