name:                melvin
version:             0.1.0.0
synopsis:            A dAmn <-> IRC server
description:         The project that kevin should have been.
homepage:            https://github.com/joelteon/melvin
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Flag debug
  Default: False
  Manual: True

Flag tests
  Default: False
  Manual: True

executable melvin
  main-is:            Main.hs
  build-depends:      base >=4.4 && <4.8
                    , async >= 2.0
                    , attoparsec
                    , bytestring
                    , containers
                    , cprng-aes
                    , data-default
                    , deepseq
                    , exceptions
                    , fast-logger
                    , file-location
                    , HTTP
                    , lens >= 4.1
                    , lifted-async
                    , lifted-base
                    , machines
                    , monad-control
                    , monad-logger
                    , mtl
                    , network
                    , options >= 1.0
                    , text
                    , th-printf >= 0.2
                    , tls
                    , tls-extra
                    , transformers

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: ConstraintKinds
                      CPP
                      FlexibleContexts
                      NoImplicitPrelude
                      OverloadedStrings
                      QuasiQuotes
                      ScopedTypeVariables
                      TemplateHaskell
  ghc-options:        -Wall

  If flag(debug)
    ghc-options:      -fprof-all -ddump-splices

  If flag(tests)
    buildable:        False

library
  exposed-modules:    Melvin
                      Melvin.Damn.Tablumps
                      Melvin.Options
                      Melvin.Prelude
                      Text.Damn.Packet
  other-modules:      Melvin.Chatrooms
                      Melvin.Client
                      Melvin.Client.Auth
                      Melvin.Client.Packet
                      Melvin.Damn
                      Melvin.Damn.Actions
                      Melvin.Damn.HTML
                      Melvin.Exception
                      Melvin.Internal.Orphans
                      Melvin.Token
                      Melvin.Types
                      Text.Damn.Packet.Internal
                      Text.Damn.Packet.Parser
  hs-source-dirs:     src
  build-depends:      base
                    , attoparsec
                    , bytestring
                    , containers
                    , cprng-aes
                    , data-default
                    , deepseq
                    , exceptions >= 0.5
                    , fast-logger
                    , file-location
                    , HTTP >= 4000.2.12
                    , lens
                    , lifted-async
                    , lifted-base
                    , machines
                    , monad-control
                    , monad-logger
                    , mtl
                    , network
                    , options
                    , text
                    , th-printf
                    , tls
                    , tls-extra
                    , transformers
  default-language:   Haskell2010
  default-extensions: ConstraintKinds
                      CPP
                      FlexibleContexts
                      NoImplicitPrelude
                      OverloadedStrings
                      QuasiQuotes
                      ScopedTypeVariables
                      TemplateHaskell

  If flag(tests)
    cpp-options:      -DTESTS
  Else
    buildable:        False

test-suite io-machines
  type:               exitcode-stdio-1.0
  main-is:            io.hs
  hs-source-dirs:     tests
  build-depends:      base, bytestring, machines, melvin, QuickCheck, quickcheck-instances, split
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite functional
  type:               exitcode-stdio-1.0
  main-is:            melvin-test.hs
  hs-source-dirs:     tests
  build-depends:      base, async, bytestring, machines, melvin, monad-logger, network
  default-language:   Haskell2010
  ghc-options:        -Wall

  -- If !flag(tests)
  buildable:        False

benchmark parser
  type:               exitcode-stdio-1.0
  main-is:            parser.hs
  ghc-options:        -Wall -O2
  hs-source-dirs:     benchmarks
  build-depends:      base, criterion, melvin, text
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
